--- a/vue-livecomments/package.json
+++ b/vue-livecomments/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.0.0-rc.13",
     "i": "^0.3.6",
     "npm": "^6.8.0",
+    "qrcode.vue": "^1.6.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
