--- a/vue-livecomments/package.json
+++ b/vue-livecomments/package.json
@@ -18,7 +18,8 @@
     "qrcode.vue": "^1.6.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "websocket": "^1.0.28"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
